--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,61 @@ a:hover {
   padding: 0 10px;
   box-sizing: border-box;
 }
+
+.header-top {
+  overflow: hidden;
+  padding-top: 15px;
+  margin-bottom: 160px;
+}
+
+.logo {
+  float: left;
+}
+
+.menu {
+  float: right;
+  list-style: none;
+  padding-top: 15px;
+}
+
+.menu li {
+  float: left;
+  margin-left: 25px;
+}
+
+.menu li a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 13px;
+  text-transform: uppercase;
+}
+
+.header-main {
+  color: #fff;
+  text-align: center;
+  width: 750px;
+  margin: 0 auto;
+  padding-bottom: 205px;
+}
+
+.header-main h1 {
+  font-size: 32px;
+  margin-bottom: 50px;
+}
+
+.header-main h2 {
+  font-size: 14px;
+  font-weight: 300;
+  margin-bottom: 50px;
+  line-height: 24px;
+}
+
+.link-button {
+  display: inline-block;
+  padding: 10px 15px;
+  font-weight: 500;
+  text-decoration: none;
+  border: 1px solid #00e0d0;
+  color: #00e0d0;
+}
