--- a/css/style.css
+++ b/css/style.css
@@ -122,3 +122,48 @@ a:hover {
   margin-bottom: 24px;
   line-height: 22px;
 }
+
+.form {
+  width: 460px;
+  margin: 0 auto 100px auto;
+}
+
+.form h2 {
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 22px;
+  margin-bottom: 24px;
+}
+
+.input__txt {
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 15px 20px;
+  border: 1px solid #e5e5e5;
+  font-size: 14px;
+  color: #413d4b;
+  outline: none;
+}
+
+.textarea__txt {
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 15px 20px;
+  border: 1px solid #e5e5e5;
+  font-size: 14px;
+  color: #413d4b;
+  outline: none;
+  height: 150px;
+}
+
+.button {
+  display: inline-block;
+  padding: 10px 15px;
+  font-weight: 500;
+  text-decoration: none;
+  border: 1px solid #00e0d0;
+  color: #00e0d0;
+  background: none;
+  font-size: 16px;
+  cursor: pointer;
+}
